# programmer-mcp

./: .gitignore  .mcp.json  .rules  .rules-zed-provided  Cargo.toml  TODO.md  TODO_next.md  architecture.md  debug-mcp.config.toml  develop.nix  dogfeeding-observations-2025-01.md  dogfeeding.md  flake.nix  functionality.md  go_ref_impl_overview.md  human_todos.md  initial_debug.md  message_passing.md  python.md  remote_debug_bug.md  request-interactive-debug.md  request.md  request_debugger_mcp.md  shorted_files.md  test_lsp.py  test_py.py  test_remote.py
.programmer-mcp/: .gitignore
.programmer-mcp/.cache/: eed1871eace00f2b.json
.programmer-mcp/triggers/: await-result.json  done-trigger.json  rebuild-result.json  test-no-debug.json
debug-mcp/: .gitignore
src/: config.rs  ipc.rs  main.rs  nix.rs  relay.rs  server.rs  watcher.rs
src/background/: mod.rs  process.rs  task.rs  trigger.rs
src/debug/: build.rs  child.rs  config.rs  format.rs  handler.rs  mod.rs  proxy.rs  relay.rs  server.rs  spawn.rs  types.rs  update.rs
src/lsp/: capabilities.rs  client.rs  detect_lang.rs  manager.rs  mod.rs  transport.rs
src/remote/: client.rs  connection.rs  listener.rs  mod.rs  ssh.rs
src/tools/: call_hierarchy.rs  code_action.rs  code_actions.rs  definition.rs  diag_cache.rs  diagnostics.rs  diagnostics_cache.rs  doc_index.rs  edit.rs  edit_apply.rs  edit_extract.rs  edit_pending.rs  edit_range_apply.rs  edit_types.rs  exec_helpers.rs  execute.rs  execute_edit_ops.rs  execute_lsp.rs  formatting.rs  grep.rs  hover.rs  impls.rs  indent.rs  json_util.rs  list_dir.rs  mod.rs  (+19 more)
(+23 files in other folders)
