[package]
name = "programmer-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
lsp-types = "0.97"
jsonrpsee = { version = "0.24", features = ["async-client", "client-core"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "7"
strsim = "0.11"
nucleo-matcher = "0.3"
similar = "2"
heck = "0.5"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
ignore = "0.4.25"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
